...
        ),
        depth: 4,
        intensity: 0.9,
      ),
      child: Scaffold(
        appBar: NeumorphicAppBar(
          title: const Text('Categories'),
        ),
        body: _categoryListBuilder(),
        drawer: CommonDrawer(
          animationController: animationController,
        ),
        floatingActionButton: FloatingActionButton(
...
